--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "guzzlehttp/guzzle": "~5.0",
-        "phpdocumentor/phpdocumentor": "2.*"
-
+        "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
         "php": ">=5.4.0",
